--- a/genestack-lsf-core/pom.xml
+++ b/genestack-lsf-core/pom.xml
@@ -45,6 +45,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/src/jni/lsf</directory>
+                            <includes>
+                                <include>com_genestack_cluster_lsf_LSFBatch*.h</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
