--- a/genestack-lsf-core/src/jni/lsf/Makefile
+++ b/genestack-lsf-core/src/jni/lsf/Makefile
@@ -1,9 +1,16 @@
 #
-# Copyright (c) 2011-2013 Genestack Limited
-# All Rights Reserved
-# THIS IS UNPUBLISHED PROPRIETARY SOURCE CODE OF GENESTACK LIMITED
-# The copyright notice above does not evidence any
-# actual or intended publication of such source code.
+# Copyright (c) 2011-2013 Genestack Limited. All Rights Reserved.
+#
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 #
 
 INCDIR = /u/lsfadm1/lsf/9.1/include
